<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_new">Add new</string>
    <string name="already_exporting">Please wait until the previous export finishes.</string>
    <string name="app_name">SailLog</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_this_trip">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this trip?</string>
    <string name="destination">Destination</string>
    <string name="sail_down">Down</string>
    <string name="end_time">End time</string>
    <string name="engine">Engine</string>
    <string name="enter_trip_name">Enter name for a new trip</string>
    <string name="export_db">Export as database</string>
    <string name="export_kml">Export as KML</string>
    <string name="export_kml_short">Export KML</string>
    <string name="export_ok">"Exported to %s"</string>
    <string name="export_no_mmc">Exporting failed: MMC file system not available</string>
    <string name="first_entry">First entry</string>
    <string name="gen_export_failed">Exporting failed: %s</string>
    <string name="heading">Heading</string>
    <string name="jib">Jib</string>
    <string name="last_entry">Last entry</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="main_sail">Main sail</string>
    <string name="motoring">Motoring</string>
    <string name="motorsailing">Motorsailing</string>
    <string name="new_trip">Name of new trip or leg</string>
    <string name="no">No</string>
    <string name="no_sail_plan">Sails down and engine off</string>
    <string name="nothing_to_export">Nothing to export</string>
    <string name="no_position_data">Position: -</string>
    <string name="no_speed_heading_data">Speed: -, Heading: -</string>
    <string name="no_trip_selected">Click to select a trip</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="onoff">On/Off</string>
    <string name="position">Position</string>
    <string name="save">Save</string>
    <string name="sailing">Sailing</string>
    <string name="select_this_trip">Select</string>
    <string name="select_a_trip">Pick a trip</string>
    <string name="short_export_db">Export db</string>
    <string name="speed">Speed</string>
    <string name="spinnaker">Spinnaker</string>
    <string name="start_time">Start time</string>
    <string name="time_span">First and last entry of trip</string>
    <string name="total_distance">Distance</string>
    <string name="total_sailing_time">Sail time</string>
    <string name="total_engine_time">Engine time</string>
    <string name="track_location">Location Tracking</string>
    <string name="trip_all_fields_cannot_be_empty">You must enter a name, a start location, or an end location</string>
    <string name="trip_from">Start location</string>
    <string name="trip_name">Trip name</string>
    <string name="trip_stats">Trip statistics</string>
    <string name="trip_to">End location</string>
    <string name="trip_to_select">Select: %s</string>
    <string name="sail_up">Up</string>
    <string name="yes">Yes</string>
    <string name="cannot_delete_selected">You cannot delete the selected trip</string>
    <string name="show_in_google_earth">Show in Google Earth</string>
    <string name="start_saving_failed">Saving location data failed. Please restart the application.</string>
    <string name="starting_google_earth">Starting Google Earth</string>
    <string name="location_data_saving">SailLog Location Data Saving</string>
</resources>
